# polars-go-bridge

./: .gitignore  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  gen.sh  go.mod  go.sum  main.go  todo.md
.github/workflows/: build.yml  release.yml
bridge/: arrow_cdata.go  arrow_cdata_nocgo.go  bridge_test.go  cgo_disabled.go  cgo_enabled.go  loader_unix.go  loader_win.go  types.go
examples/: scan_csv_example.go
polars/: arrow_zero_copy_helpers_cgo_test.go  arrow_zero_copy_helpers_nocgo_test.go  dataframe.go  dataframe_handle.go  dataframe_map.go  expr.go  expr_str.go  scan_test.go  utils.go
proto/: plan.pb  polars_bridge.pb.go  polars_bridge.proto
rust/: Cargo.toml  build.rs
rust/src/: arrow_bridge.rs  error.rs  executor.rs  expr_str.rs  lib.rs
scripts/: build.bat  build.sh  run.bat  run.sh  test.bat  test.sh
